--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <div class="calculator">
-        <div class="screen"></div>
+        <div class="screen">.</div>
 
         <br>
 
